// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spartacus CDC schematics: ng-add CDC feature eager loading should import appropriate modules 1`] = `
"import { NgModule } from '@angular/core';
import { CdcModule } from \\"@spartacus/cdc\\";
import { CdcConfig, CdcRootModule } from \\"@spartacus/cdc/root\\";
import { provideConfig } from \\"@spartacus/core\\";

@NgModule({
  declarations: [],
  imports: [
    CdcRootModule,
    CdcModule
  ],
  providers: [provideConfig(<CdcConfig>{
    cdc: [
      {
        baseSite: 'electronics-spa',
        javascriptUrl: 'JS_SDK_URL_PLACEHOLDER',
        sessionExpiration: 3600
      },
    ],
  })]
})
export class CdcFeatureModule { }
"
`;

exports[`Spartacus CDC schematics: ng-add CDC feature general setup should add the feature using the lazy loading syntax 1`] = `
"import { NgModule } from '@angular/core';
import { CdcConfig, CdcRootModule, CDC_FEATURE } from \\"@spartacus/cdc/root\\";
import { CmsConfig, provideConfig } from \\"@spartacus/core\\";

@NgModule({
  declarations: [],
  imports: [
    CdcRootModule
  ],
  providers: [provideConfig(<CmsConfig>{
    featureModules: {
      [CDC_FEATURE]: {
        module: () =>
          import('@spartacus/cdc').then((m) => m.CdcModule),
      },
    }
  }),
  provideConfig(<CdcConfig>{
    cdc: [
      {
        baseSite: 'electronics-spa',
        javascriptUrl: 'JS_SDK_URL_PLACEHOLDER',
        sessionExpiration: 3600
      },
    ],
  })
  ]
})
export class CdcFeatureModule { }
"
`;

exports[`Spartacus CDC schematics: ng-add CDC feature validation of jsSDKUrl should set the given javascriptUrl 1`] = `
"import { NgModule } from '@angular/core';
import { CdcConfig, CdcRootModule, CDC_FEATURE } from \\"@spartacus/cdc/root\\";
import { CmsConfig, provideConfig } from \\"@spartacus/core\\";

@NgModule({
  declarations: [],
  imports: [
    CdcRootModule
  ],
  providers: [provideConfig(<CmsConfig>{
    featureModules: {
      [CDC_FEATURE]: {
        module: () =>
          import('@spartacus/cdc').then((m) => m.CdcModule),
      },
    }
  }),
  provideConfig(<CdcConfig>{
    cdc: [
      {
        baseSite: 'electronics-spa',
        javascriptUrl: '<dc>.gigya.com/<api-key>',
        sessionExpiration: 3600
      },
    ],
  })
  ]
})
export class CdcFeatureModule { }
"
`;

exports[`Spartacus CDC schematics: ng-add CDC feature warning for blank jsSDKUrl should set the default JS_SDK_URL_PLACEHOLDER 1`] = `
Object {
  "children": Array [],
  "exports": Object {},
  "filename": "/Users/i323558/CX/spacdcconfig/spartacus/integration-libs/cdc/schematics/add-cdc/index_spec.ts",
  "id": "/Users/i323558/CX/spacdcconfig/spartacus/integration-libs/cdc/schematics/add-cdc/index_spec.ts",
  "loaded": true,
  "main": [Circular],
  "parent": null,
  "path": "/Users/i323558/CX/spacdcconfig/spartacus/integration-libs/cdc/schematics/add-cdc",
  "paths": Array [
    "/Users/i323558/CX/spacdcconfig/spartacus/integration-libs/cdc/schematics/add-cdc/node_modules",
    "/Users/i323558/CX/spacdcconfig/spartacus/integration-libs/cdc/schematics/node_modules",
    "/Users/i323558/CX/spacdcconfig/spartacus/integration-libs/cdc/node_modules",
    "/Users/i323558/CX/spacdcconfig/spartacus/integration-libs/node_modules",
    "/Users/i323558/CX/spacdcconfig/spartacus/node_modules",
    "/Users/i323558/CX/spacdcconfig/node_modules",
    "/Users/i323558/CX/node_modules",
    "/Users/i323558/node_modules",
    "/Users/node_modules",
    "/node_modules",
  ],
}
`;

exports[`Spartacus CDC schematics: ng-add CDC feature warning for missing jsSDKUrl should set the default JS_SDK_URL_PLACEHOLDER 1`] = `
Object {
  "children": Array [],
  "exports": Object {},
  "filename": "/Users/i323558/CX/spacdcconfig/spartacus/integration-libs/cdc/schematics/add-cdc/index_spec.ts",
  "id": "/Users/i323558/CX/spacdcconfig/spartacus/integration-libs/cdc/schematics/add-cdc/index_spec.ts",
  "loaded": true,
  "main": [Circular],
  "parent": null,
  "path": "/Users/i323558/CX/spacdcconfig/spartacus/integration-libs/cdc/schematics/add-cdc",
  "paths": Array [
    "/Users/i323558/CX/spacdcconfig/spartacus/integration-libs/cdc/schematics/add-cdc/node_modules",
    "/Users/i323558/CX/spacdcconfig/spartacus/integration-libs/cdc/schematics/node_modules",
    "/Users/i323558/CX/spacdcconfig/spartacus/integration-libs/cdc/node_modules",
    "/Users/i323558/CX/spacdcconfig/spartacus/integration-libs/node_modules",
    "/Users/i323558/CX/spacdcconfig/spartacus/node_modules",
    "/Users/i323558/CX/spacdcconfig/node_modules",
    "/Users/i323558/CX/node_modules",
    "/Users/i323558/node_modules",
    "/Users/node_modules",
    "/node_modules",
  ],
}
`;
